--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
     let playerSelection = "roCK";
     playerSelection = playerSelection.toUpperCase();
 
-    console.log(playRound(playerSelection, computerSelection));
+    function game() {
+  for (let i=1; i <= 4; i++) {
+    return (playRound(playerSelection, computerSelection));
+  }
+}
 
+console.log(game());
+
+  
   </script>
 
 </body>
